tests-build/tests/fail/macros_main_missing_async.rs
use tests_build::tokio;

#[tokio::main]
fn test_missing_async() {}

fn main() {}
